<resources>
    <string name="welcome">WELCOME!</string>
    <string name="app_name">HOME FAR FROM HOME</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="invited">Enter as Invited</string>
    <string name="nameu">Enter your user name</string>
    <string name="mail">Enter e-mail address</string>
    <string name="telefono">Enter phone number</string>
    <string name="preferences">Choose you preferences: </string>
    <string name="sport">Sports</string>
    <string name="restaurant">Restaurants</string>
    <string name="cultural">Cultural</string>
    <string name="social">Social </string>
    <string name="nightlife">NightLife </string>
    <string name="language">Enter your language </string>
    <string name="password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember">Remember me!</string>
    <string name="forgot">Forgot your password?</string>
    <string name="back">Return to home page</string>
    <string name="enter">Enter</string>
    <string name="accept">Accept terms and conditions</string>
    <string name="events">Events to make you feel home</string>
    <string name="welcome_events">Welcome user </string>
    <string name="profile">Your profile</string>
    <string name="profilebutton">Profile</string>
    <string name="hello_profile">Hello </string>
    <string name="profile_language">Change language: </string>
    <string name="map">Map</string>
    <string name="arrive">How to arrive?</string>
    <string name="fav">Add event to favourite</string>
    <string name="removeFav">Remove from favourite</string>
    <string name="logOut">Log Out</string>
    <string name="no_favs">You do not have any favourite event yet</string>
    <string name="yes_favs">Here you have your favourite events</string>
    <string name="eventsBut">Add events here!</string>
    <string name="backEvents">events</string>
    <string name="es">Spanish</string>
    <string name="en">English</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="preferences">
        <item>All</item>
        <item>Sports</item>
        <item>Restaurants</item>
        <item>Cultural</item>
        <item>Social</item>
        <item>Night Life</item>
    </string-array>





</resources>