<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="190dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/logo" />
            <TextView
                android:id="@+id/name"
                android:layout_width="190dp"
                android:layout_height="145dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#817E7D"
                android:textSize="35sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#F8928B"
            android:textSize="45sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/logIn"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:backgroundTint="#F8928B"
            android:text="@string/login"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/signUp"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:backgroundTint="#F8928B"
            android:text="@string/signup"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/invited"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:backgroundTint="#F8928B"
            android:text="@string/invited"
            android:textSize="25sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>