<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="190dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="145dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#817E7D"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#F8928B"
            android:textSize="45sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/mail"
                android:textAlignment="gravity"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/logInMail"
                android:layout_width="145dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/password"
                android:textAlignment="gravity"
                android:textSize="22sp"/>

            <EditText
                android:id="@+id/logInPassword"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:id="@+id/forgot"
            android:layout_width="270dp"
            android:layout_height="75dp"
            android:backgroundTint="#F8928B"
            android:text="@string/forgot"
            android:textSize="22sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/back"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:backgroundTint="#F8928B"
                android:text="@string/back"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/logIn"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:backgroundTint="#F8928B"
                android:text="@string/enter"
                android:textSize="20sp"/>

        </LinearLayout>


    </LinearLayout>



















</androidx.constraintlayout.widget.ConstraintLayout>