<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/events"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:text="@string/events"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#F8928B"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:id="@+id/user">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@string/preferences" />

                    <Spinner
                        android:id="@+id/preferencesFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:entries="@array/preferences"/>

                </LinearLayout>



            </LinearLayout>



        </LinearLayout>
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/linear_events"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:gravity="top"
                android:orientation="vertical">
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/map"
                android:layout_width="168dp"
                android:layout_height="68dp"
                android:backgroundTint="#F8928B"
                android:text="@string/map"
                android:textSize="20sp" />

            <Button
                android:id="@+id/profile"
                android:layout_width="168dp"
                android:layout_height="68dp"
                android:backgroundTint="#F8928B"
                android:text="@string/profilebutton"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>